# Auditing-and-Controlling-Context-Bloat-in-LLM-Based-Agents

./: .gitignore  CHANGELOG.md  Context_Bloat_Action_Plan.docx  LICENSE  Master_Action_Plan.docx  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: deepseek_smoke.json  langchain_pilot.json  pilot.json
context_auditor/: __init__.py  _version.py  bloat.py  cli.py  evaluation.py  framework_compare.py  guard.py  hashing.py  io.py  langchain_adapter.py  message_mitigation.py  metrics.py  mitigation.py  mitigation_eval.py  provenance.py  providers.py  reporting.py  schema.py  text_similarity.py  tokenization.py  tracer.py
datasets/controlled_synthetic/: memory_items.json  policy_docs.json  tasks.json
docs/: architecture.md  chapter_outline.md  experiment_protocol.md  references.bib  related_work.md  thesis_proposal.md
experiments/: __init__.py  config.py  custom_react.py  datasets.py  langchain_pilot.py  pilot.py  real_model_smoke.py  retrieval.py  suite.py  tasks.py
scripts/: analyze_traces.py  build_action_plan_docx.py  build_context_bloat_action_plan_docx.py  run_pilot.py
tests/: test_auditor.py  test_bloat_and_mitigation.py  test_config_and_reporting.py  test_experiment_suite.py  test_framework_compare.py  test_langchain_adapter.py  test_langchain_pilot.py  test_message_mitigation.py  test_providers.py  test_real_model_smoke.py  test_retrieval_and_mitigation_eval.py
