[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-bloat-auditor"
version = "0.7.0"
description = "Runtime tracing, measurement, and mitigation toolkit for context bloat in LLM-based agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Guochen Li" }
]
keywords = [
  "llm-agents",
  "context-bloat",
  "runtime-auditing",
  "provenance",
  "rag",
  "tool-use",
  "memory"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = []

[project.optional-dependencies]
docs = ["python-docx>=1.1.0"]
langchain = ["langchain-core>=0.2.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
context-auditor = "context_auditor.cli:main"

[tool.setuptools.packages.find]
include = ["context_auditor*", "experiments*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
